--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "prn-calculator-cli",
   "version": "1.0.0",
-  "description": "RPN-calculator-cli",
+  "description": "A demo project to show the OOP way in the case of trivial RPN calculator",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/velidan/prn-calculator-cli",
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["rpn", "oop", "rpn calculator", "modern frontend stack"],
   "scripts": {
     "describe": "npm-scripts-info",
     "start": "npm run build && node ./build/main/index.js",
@@ -34,6 +34,7 @@
     "test": "Lint and unit test the project",
     "doc": "Generate HTML API documentation and open it in a browser",
     "doc:json": "Generate API documentation in typedoc JSON format",
+    "doc:publish": "Publish docs to github pages",
     "version": "Bump package.json version, update CHANGELOG.md, tag release",
     "reset": "Delete all untracked files and reset the repo to the last commit",
     "prepare-release": "One-step: clean, build, test, docs, and prep a release"
